task1-kubernetes-hardening/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Images using the latest tag are not allowed."
        pattern:
          spec:
            containers:
            - image: "!*:latest"
